# module4-plugin

./: .gitignore  Cargo.toml  README.md  blur-plugin-config.json  mirror-plugin-config.json
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
image_processor/: Cargo.toml
image_processor/src/: cli.rs  error.rs  lib.rs  logger.rs  main.rs  plugin_loader.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: error.rs  lib.rs  logger.rs
plugins_support/: Cargo.toml
plugins_support/src/: config_parse.rs  error.rs  lib.rs  logger.rs
