[workspace]
resolver="3"
members = [
    "blur_plugin",
    "mirror_plugin",
    "image_processor"
]

# Общие настройки для всех членов workspace
[workspace.package]
version = "0.1.0"
authors = ["Eugen Batts"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"